# ColBERT-Token-Experiments

./: .gitignore  .gitmodules  README.md  analyze_d_q_mask.py  analyze_dense_retriever.py  analyze_intrapassage.py  analyze_masks.py  analyze_query_shift.py  bert_tok_removal.ipynb  bert_tok_removal.py  cluster_mapping.py  cluster_query.py  collect_d_embs.py  compare_res.py  compare_res_cluster.py  compare_res_shallow_vs_deep.py  compare_res_stopword.py  compare_res_trec.py  compute_query_data.py  compute_query_shift.py  control.py  create_2d_pca.py  environment.yml  experiment.ipynb  experiment.py  experiment.sh  index.py  index_trec.py  index_trec_v2.py  index_v2.py  metrics.py  mod_utils.py  process_query_data.py  prune_bert_tokens.ipynb  read_results.ipynb  run_baseline_v2.py  shallow_vs_deep_metrics.py  stopword_removal.py  test.ipynb  trec_utils.py  (+1 more)
colbert_rs/: Cargo.toml  build-and-install.sh  pyproject.toml
colbert_rs/src/: lib.rs  retrieve_df_builder.rs  scorer.rs
